# Calculator

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  dataTypes.cpp  dataTypes.h  exceptions.h  expression.cpp  expression.h  factorisation.cpp  factorisation.h  fraction.cpp  fraction.h  main.cpp  myMath.cpp  myMath.h  number.cpp  number.h  pch.h  safeInt.hpp
.github/workflows/: main.yml
src/: app.rs  expression.rs  grammar.pest  lib.rs  macros.rs  main.rs  my_math.rs  number.rs  trig_number.rs  types.rs
